<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/Name_editText"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="Name"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textColorHint="#000" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/toppings"
            android:textColor="#000" />

        <CheckBox
            android:id="@+id/whipped_cream_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:paddingStart="@dimen/checkbox"
            android:paddingEnd="@dimen/checkbox"
            android:paddingRight="0dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:paddingStart="@dimen/checkbox"
            android:paddingEnd="@dimen/checkbox"
            android:paddingRight="0dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView"
            style="@style/HeaderTextStyle"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/quantity"
            android:textColor="#000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button

                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="20dp"
                android:onClick="Decrement"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/_0"
                android:textColor="#000" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"

                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"

                android:onClick="Increment"
                android:text="@string/plus_sign" />


        </LinearLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:onClick="submitOrder"
            android:text="@string/order" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="419dp"
            android:contentDescription="@string/just_an_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />


    </LinearLayout>
</ScrollView>